// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[v3] ModalActions Component allows external props to be added 1`] = `
<WithStyles(HvModalActions)
  disableActionSpacing={true}
>
  Modal Content
</WithStyles(HvModalActions)>
`;

exports[`[v3] ModalActions Component allows external styles to be added 1`] = `
<WithStyles(HvModalActions)
  classes={
    Object {
      "action": "testClassAction",
      "root": "testClassRoot",
    }
  }
>
  Modal Content
</WithStyles(HvModalActions)>
`;

exports[`[v3] ModalActions Component should render correctly if opened 1`] = `
<WithStyles(HvModalActions)>
  Modal Content
</WithStyles(HvModalActions)>
`;

exports[`[v3] ModalActions withStyles should render correctly 1`] = `
<WithStyles(HvModalActions)>
  Modal Content
</WithStyles(HvModalActions)>
`;
